dhall/tests/type-errors/unit/RecordTypeDuplicateFields.txt
Type error: error: RecordTypeDuplicateField
 --> <current file>:1:0
  |
1 | { x: Natural, x: Natural }
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^ RecordTypeDuplicateField
  |
